--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sass": "^1.80.6"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "decap-cms-app": "^3.0.0"
   }
 }
